# projekt_zaawansowane_metody_programowania

./: baza.sql  instrukcja.md
backend/: main.py  pyproject.toml  readme.md  requirements.txt  requirements_uv.txt  vercel1.json
backend/auth/: authorization.py
backend/db/: database.py  models.py  schemas.py
backend/routes/: achievements.py  collection.py  comments.py  mountains.py  qr.py  ranking.py  users.py
frontend/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: AchievementCard.vue  AppFooter.vue  AppHeader.vue  Comment.vue  CommentInput.vue  CommentReply.vue  MountainCard.vue  UserCardRanking.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue  mountains.vue  ranking.vue  register.vue
frontend/pages/mountain/: [id].vue
frontend/pages/qr/: [id].vue
frontend/pages/user/: achievements.vue  collection.vue  loginrequired.vue
