[project]
name = "zp-projekt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "bcrypt==4.1.2",
    "cffi==2.0.0",
    "click==8.3.0",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi[standard]==0.120.4",
    "fastapi-utils==0.8.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "typing-inspect==0.9.0",
    "annotated-doc==0.0.3",
    "certifi==2025.10.5",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "fastapi-cli==0.0.14",
    "fastapi-cloud-cli==0.3.1",
    "greenlet==3.2.4 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "psutil==5.9.8",
    "pygments==2.19.2",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.6",
    "sentry-sdk==2.43.0",
    "shellingham==1.5.4",
    "typer==0.20.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
]
